--- a/style.css
+++ b/style.css
@@ -30,3 +30,23 @@ body {
   background-size: cover;
   text-align: center;
 }
+
+.game-health {
+  position: relative;
+  width: 200px;
+  height: 25px;
+  border: 2px solid #fff;
+  margin-left: auto;
+}
+
+.game-health-number {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 10px;
+}
+
+
+
+
