--- a/style.css
+++ b/style.css
@@ -69,6 +69,18 @@ body {
   background-size: cover;
 }
 
+.game-feedback {
+  font-size: 14px;
+}
+
+.game footer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+}
+
+
+
 
 
 
